--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Kamień, Papier, Nożyce</h1>
+    <div>
+        <img data-option="paper" class="first" src="pictures/paper.jpg" alt="" tittle="Paper">
+        <img data-option="rock" src="pictures/rock.jpg" alt="" tittle="Rock">
+        <img data-option="scissors" src="pictures/scissors.jpg" alt="" tittle="scissors">
+    </div>
+    <button class="start">Zagraj!</button>
+    <div class="panel-left">
+        <h3>Wyniki gry</h3>
+        <p>Twój wybór: <span data-summary="your-choice"></span></p>
+        <p>Wybór komputera: <span data-summary="ai-choice"></span></p>
+        <h2>Zwycięzca gry: <span data-summary="who-win"></span></h2>
+    </div>
+    <div class="panel-right">
+        <h3>Aktualne wyniki</h3>
+        <p class="numbers">Liczba gier: <span>0</span></p>
+        <p class="wins">Wygranych: <span>0</span></p>
+        <p class="losses">Przegranych: <span>0</span></p>
+        <p class="draws">Remisów: <span>0</span></p>
+    </div>
 
     <script src="main.js"></script>
 </body>
