--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Kamień, Papier, Nożyce</h1>
-    <div>
+    <h2>Czym chcesz zagrać?</h2>
+    <div class="select">
         <img data-option="paper" class="first" src="pictures/paper.jpg" alt="" tittle="Paper">
         <img data-option="rock" src="pictures/rock.jpg" alt="" tittle="Rock">
         <img data-option="scissors" src="pictures/scissors.jpg" alt="" tittle="scissors">
     </div>
     <button class="start">Zagraj!</button>
-    <div class="panel-left">
-        <h3>Wyniki gry</h3>
-        <p>Twój wybór: <span data-summary="your-choice"></span></p>
-        <p>Wybór komputera: <span data-summary="ai-choice"></span></p>
-        <h2>Zwycięzca gry: <span data-summary="who-win"></span></h2>
+    <div class="panel">
+        <div class="panel-left">
+            <h3>Wyniki gry</h3>
+            <p>Twój wybór: <span data-summary="your-choice"></span></p>
+            <p>Wybór komputera: <span data-summary="ai-choice"></span></p>
+            <h2>Zwycięzca gry: <span data-summary="who-win"></span></h2>
+        </div>
+        <div class="panel-right">
+            <h3>Aktualne wyniki</h3>
+            <p class="numbers">Liczba gier: <span>0</span></p>
+            <p class="wins">Wygranych: <span>0</span></p>
+            <p class="losses">Przegranych: <span>0</span></p>
+            <p class="draws">Remisów: <span>0</span></p>
+        </div>
     </div>
-    <div class="panel-right">
-        <h3>Aktualne wyniki</h3>
-        <p class="numbers">Liczba gier: <span>0</span></p>
-        <p class="wins">Wygranych: <span>0</span></p>
-        <p class="losses">Przegranych: <span>0</span></p>
-        <p class="draws">Remisów: <span>0</span></p>
-    </div>
-
+    
     <script src="main.js"></script>
 </body>
 </html>
