--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,29 +9,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Kamień, Papier, Nożyce</h1>
-    <h2>Czym chcesz zagrać?</h2>
+    <h1>Rock, Paper, Scissors</h1>
+    <h2>What is your choice?</h2>
     <div class="select">
         <img data-option="paper" class="first" src="pictures/paper.jpg" alt="" tittle="Paper">
         <img data-option="rock" src="pictures/rock.jpg" alt="" tittle="Rock">
         <img data-option="scissors" src="pictures/scissors.jpg" alt="" tittle="scissors">
     </div>
-    <button class="start">Zagraj!</button>
+    <button class="start">Let's play!</button>
     <div class="panel">
         <div class="panel-left">
-            <h3>Wyniki gry</h3>
-            <p>Twój wybór: <span data-summary="your-choice"></span></p>
-            <p>Wybór komputera: <span data-summary="ai-choice"></span></p>
-            <h2>Zwycięzca gry: <span data-summary="who-win"></span></h2>
+            <h3>Game result</h3>
+            <p>Your choice: <span data-summary="your-choice"></span></p>
+            <p>Computer choice: <span data-summary="ai-choice"></span></p>
+            <h2>The winner is: <span data-summary="who-win"></span></h2>
         </div>
         <div class="panel-right">
-            <h3>Aktualne wyniki</h3>
-            <p class="numbers">Liczba gier: <span>0</span></p>
-            <p class="wins">Wygranych: <span>0</span></p>
-            <p class="losses">Przegranych: <span>0</span></p>
-            <p class="draws">Remisów: <span>0</span></p>
+            <h3>Current results</h3>
+            <p class="numbers">Number of games: <span>0</span></p>
+            <p class="wins">Wins: <span>0</span></p>
+            <p class="losses">Losses: <span>0</span></p>
+            <p class="draws">Draws: <span>0</span></p>
         </div>
     </div>
+    <button class="reset">Reset</button>
     
     <script src="main.js"></script>
 </body>
